[gd_scene load_steps=6 format=2]

[ext_resource path="res://tools/Tool.tscn" type="PackedScene" id=1]
[ext_resource path="res://tools/dispenser/Dispenser.gd" type="Script" id=2]
[ext_resource path="res://tools/dispenser/Dispenser.png" type="Texture" id=3]
[ext_resource path="res://samples/abdon.tscn" type="PackedScene" id=4]
[ext_resource path="res://samples/Water.tscn" type="PackedScene" id=5]

[node name="Dispenser" instance=ExtResource( 1 )]
collision_layer = 2
script = ExtResource( 2 )
icon = ExtResource( 3 )
samples = [ ExtResource( 4 ), ExtResource( 5 ) ]

[node name="ControlRoot" parent="." index="0"]
editor/display_folded = false

[node name="ActionBox" parent="ControlRoot" index="0"]
margin_left = 40.0
margin_top = -30.0
margin_right = 163.0
margin_bottom = 106.0

[node name="PowerButton" type="CheckButton" parent="ControlRoot/ActionBox" index="0"]
margin_right = 123.0
margin_bottom = 48.0
text = "Power"
align = 2

[node name="SampleChooserButton" type="OptionButton" parent="ControlRoot/ActionBox" index="1"]
margin_top = 53.0
margin_right = 123.0
margin_bottom = 92.0
text = "Item 0"

[node name="DeleteButton" parent="ControlRoot/ActionBox" index="2"]
margin_top = 97.0
margin_right = 123.0
margin_bottom = 136.0

[node name="Sprite" type="Sprite" parent="." index="2"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="3"]
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( 138, -83.2, 138, 84, 135.5, 84, 6.5, 150, -8, 150, -8, 148.2, -138, 83.2, -138, -83.2, -4.39999, -150, 2.5, -150 )

[node name="Timer" type="Timer" parent="." index="4"]
wait_time = 0.2
[connection signal="toggled" from="ControlRoot/ActionBox/PowerButton" to="." method="_on_PowerButton_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
